--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,15 @@
 	<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-
+	<div class="wrapper">
+		<div class="maincontent">
+			<section class="section hero">
+				<div class="container">
+					
+				</div>
+			</section>
+		</div>
+	</div>
 </body>
 <script src="./libs/jquery-3.3.1.min.js"></script>
 <script src="./js/app.min.js"></script>
